# fingerserver

./: AchieveManager.cpp  AchieveManager.h  AchieveMsgHandler.cpp  AchieveMsgHandler.h  AllItemManager.cpp  AllItemManager.h  BuffManager.cpp  BuffManager.h  CharactorManager.cpp  CharactorManager.h  CharactorMsgHandler.cpp  CharactorMsgHandler.h  ChatManager.cpp  ChatManager.h  ChatMsgHandler.cpp  ChatMsgHandler.h  ClientConnection.cpp  ClientConnection.h  CommonMsgHandler.cpp  CommonMsgHandler.h  ConfigParser.h  ConsortManager.cpp  ConsortManager.h  ConsortMsgHandler.cpp  ConsortMsgHandler.h  DBInterface.h  DebugMsgHandler.cpp  DebugMsgHandler.h  DetailInfoManager.cpp  DetailInfoManager.h  DetailInfoMsgHandler.cpp  DetailInfoMsgHandler.h  EmailManager.cpp  EmailManager.h  EmailMsgHandler.cpp  EmailMsgHandler.h  EquipManager.cpp  EquipManager.h  FashionManager.cpp  FashionManager.h  (+125 more)
Buy/: Buy.cpp  Buy.h  Trading.cpp  Trading.h
CodeGenerator/: CPlusPlusCoder.cpp  CPlusPlusCoder.h  CSharpCoder.cpp  CSharpCoder.h  Main.cpp
CommonLib/: AccountData.h  AchieveAndDailyPacket.h  AchieveData.h  AchievementMsg.h  AchievementTable.cpp  AchievementTable.h  AttrEnhanceTable.cpp  AttrEnhanceTable.h  AttrPolishTable.cpp  AttrPolishTable.h  AttrPowerTable.cpp  AttrPowerTable.h  AttrRandomTable.cpp  AttrRandomTable.h  Award.cpp  Award.h  AwardAddRateTable.cpp  AwardAddRateTable.h  BOCPacket.h  BagMsg.h  BattleData.h  BattleMsg.h  BoxPacket.h  BuffPacket.h  BuffTable.cpp  BuffTable.h  BufferData.h  BusinessCatTable.cpp  BusinessCatTable.h  CatTaskTable.cpp  CatTaskTable.h  ChapterTable.cpp  ChapterTable.h  CharactorData.h  CharactorPacket.h  ChatData.h  ChatMsg.h  ChatPacket.h  CommonLib.h  CommonMsg.h  (+195 more)
ConsortSystem/: ConsortSystem.cpp  ConsortSystem.h
FireConfirm/: BaseChang.cpp  BaseChang.h  BattleCalc .cpp  BattleCalc .h  BattleCalc.cpp  BattleCalc.h  Box.cpp  Box.h  Character.cpp  Character.h  ClimbTower.cpp  ClimbTower.h  Code.cpp  Code.h  CourageChallenge.cpp  CourageChallenge.h  Drop.cpp  Drop.h  FireConfirmManager.cpp  FireConfirmManager.h  Gift.cpp  Gift.h  GlobalValue.cpp  GlobalValue.h  InlineActivity.cpp  InlineActivity.h  LocalData.cpp  LocalData.h  NewException.cpp  NewException.h  PVPSystem.cpp  PVPSystem.h  PVPThreadMsg.h  PVPWorker.cpp  PVPWorker.h  RankGame.cpp  RankGame.h  Robot.cpp  Robot.h  Scene.cpp  (+7 more)
GameMasterTool/: ChatPanel.cpp  ChatPanel.h  CommandPanel.cpp  CommandPanel.h  CommandSystem.cpp  CommandSystem.h  ConfigSystem.cpp  ConfigSystem.h  EmailPanel.cpp  EmailPanel.h  EventDefinition.h  EventSystem.cpp  EventSystem.h  ForbiddenPanel.cpp  ForbiddenPanel.h  GMClient.cpp  GMClient.h  GMMsgHandler.h  GameMasterTool.cpp  GameMasterTool.h  GuildInfoBasePanel.cpp  GuildInfoBasePanel.h  GuildInfoDialog.cpp  GuildInfoDialog.h  GuildInfoMemberPanel.cpp  GuildInfoMemberPanel.h  GuildInfoNotebook.cpp  GuildInfoNotebook.h  GuildPanel.cpp  GuildPanel.h  LogicSystem.cpp  LogicSystem.h  LoginPanel.cpp  LoginPanel.h  MainFrame.cpp  MainFrame.h  MallPanel.cpp  MallPanel.h  NoticePanel.cpp  NoticePanel.h  (+23 more)
GameRobot/: BattleStrategy.cpp  BattleStrategy.h  ChatStrategy.cpp  ChatStrategy.h  ConfigParser.h  GameRobot.cpp  GameRobot.h  GetOption.cpp  GetOption.h  LotteryStrategy.cpp  LotteryStrategy.h  Main.cpp  ReconnectStrategy.cpp  ReconnectStrategy.h  RobotMsgHandler.h  StrategyBase.h  StrategyManager.cpp  StrategyManager.h
Linux/: GameRobot.bat  gameserver.conf  libaprutil-1.la  libaprutil-1.lai  libaprutil-1.so.0.5.4  libaprutil-1.so.0.5.4T  libexpat.so.0  liblog4cxx.la  libmysqlclient.so.16  restart.sh  stop.sh
NetworkLib/: ErrorCode.h  IOEventOperatorEpollImpl.cpp  IOEventOperatorIocpImpl.cpp  IOEventOperatorSelectImpl.cpp  IOService.cpp  IOService.h  IOTimer.cpp  IOTimer.h  Makefile.am  MsgHandler.h  MsgHdr.h  NetworkLib.h  Socket.cpp  Socket.h  TcpConnection.cpp  TcpConnection.h  TcpListener.cpp  TcpListener.h  configure.ac
OurpalmLog/: config.ini  ini.cpp  ini.h  json.hpp  logsender.cpp  logsender.h  main.cpp  makefile  test.h  threadpool.h  掌趣科技统计日志服务端接入文档-c++版(20170605).docx
PKSystem/: PVPSystemWC.cpp  PVPSystemWC.h  pvpthread.cpp  pvpthread.h
PlatformLib/: Atomic.h  Blob.h  ByteOrder.h  CSharpSerializeImpls.cpp  CSharpSerializeImpls.h  Compat.h  Condition.cpp  Condition.h  ConfigManager.cpp  ConfigManager.h  Container.h  CsvReader.h  DataStruct.h  Delegate.h  DelegateTemplate.h  EncodingConvert.cpp  EncodingConvert.h  EventManager.cpp  EventManager.h  Fifo.h  FileUtil.cpp  FileUtil.h  FileUtilAndroidImpl.cpp  FileUtilAndroidImpl.h  FileUtilIOSImpl.h  FileUtilIOSImpl.mm  FileUtilImpl.cpp  FileUtilImpl.h  FileUtilLinuxImpl.h  FileUtilWin32Impl.h  IConvUtil.cpp  IConvUtil.h  Lock.h  Logger.cpp  Logger.h  Logger_Android.cpp  Logger_IOS.mm  Logger_Linux.cpp  Logger_Win32.cpp  LruCache.h  (+40 more)
PreBuildTool/: Main.cpp
Ranking/: Matching.cpp  Matching.h  Ranking.cpp  Ranking.h  RankingPersonal.cpp  RankingPersonal.h
TableExport/: DBCMaker.cpp  DBCMaker.h  Data.cpp  Data.h  HelpHandler.cpp  HelpHandler.h  MainFrame.cpp  MainFrame.h  MainPanel.cpp  MainPanel.h  MsgDefine.h  MsgQueue.cpp  MsgQueue.h  Renderer.cpp  Renderer.h  TableExport.cpp  TableExport.h  WXLib.h  XLHandler.cpp  XLHandler.h  XLInc.h
TableGenerator/: Main.cpp
Win32/: ALL_VC9.0.sln  ServerExport.bat  TableExport.bat
oldfiles/: AccountManager.cpp  AccountManager.h  AchievementManager.cpp  AchievementManager.h  AchievementMsgHandler.cpp  AchievementMsgHandler.h  ActivityManager.cpp  ActivityManager.h  ActivityMsgHandler.cpp  ActivityMsgHandler.h  ArenaMsgHandler.cpp  ArenaMsgHandler.h  BattleManager.cpp  BattleManager.h  BuddyManager.cpp  BuddyManager.h  BuddyMsgHandler.cpp  BuddyMsgHandler.h  BufferData2Client.h  CalculateUtil.cpp  CalculateUtil.h  ChatMsgHandler.cpp  ChatMsgHandler.h  EmailManager.cpp  EmailManager.h  EmailMsgHandler.cpp  EmailMsgHandler.h  EquipDebrisManager.cpp  EquipDebrisManager.h  EquipManager.cpp  EquipManager.h  EquipMsgHandler.cpp  EquipMsgHandler.h  ExchangeManager.cpp  ExchangeManager.h  ExchangeMsgHandler.cpp  ExchangeMsgHandler.h  GMMsgHandler.cpp  GMMsgHandler.h  (+46 more)
(+820 files in other folders)
