AM_CPPFLAGS = -Wno-deprecated -I./ -I../PlatformLib -I../NetworkLib -I../jsoncpp/include \
	 -D_LYNX_BYTE_ORDER_NOT_CONVERT -D_LYNX_DEBUG -D_LYNX_HAS_LIBICONV  -D __linux__  

noinst_LIBRARIES = libcommon.a 

libcommon_a_SOURCES = \
	CourageContentTable.cpp\
	RobotTable.cpp\
	EventTable.cpp\
	DailyTaskTable.cpp\
	DailyActiveTable.cpp\
	AchievementTable.cpp\
	InlineActivityTable.cpp\
	MysteryShopTable.cpp \
	CharactorPacket.cpp\
	HeroFashionTable.cpp\
	ShopTable.cpp	\
	RewardLottery.cpp	\
	AttrPowerTable.cpp	\
	ServantAssistBattleTable.cpp \
	ServantLuckTable.cpp \
	AttrPowerTable.cpp	\
	ServantAssistBattleTable.cpp \
	ServantLuckTable.cpp \
	TowerBoxTable.cpp \
	TowerEventTable.cpp \
	TowerMonsterTable.cpp \
	TowersTable.cpp \
	ServantFloorTable.cpp \
	ServantTreasureTable.cpp \
	ServantStarTable.cpp \
	ServantLvUpMaterialTable.cpp \
	ServantLvUpTable.cpp \
	ServantBattleOpenTable.cpp \
	AwardAddRateTable.cpp \
	TypeConditionTable.cpp \
	PowerValueTable.cpp \
	NewGemTable.cpp	\
	LevelGrowTable.cpp \
	MaterialPointsTable.cpp \
	PlayerExpTable.cpp \
	PolishPointsTable.cpp \
	MaterialTable.cpp	\
	NewEquipLvTable.cpp	\
	HeroEquipRuleTable.cpp \
	EquipGemRuleTable.cpp \
	RhymeAcupointTable.cpp \
	RhymeLevelTable.cpp \
	RhymeSkillTable.cpp \
	SkillBaseTable.cpp \
	SkillLevelTable.cpp \
	SkillTable.cpp \
	StageTable.cpp \
	ServantTable.cpp\
	BuffTable.cpp \
	ChapterTable.cpp \
	CopyFinishTime.cpp \
	EffectTable.cpp \
	EquipSetTable.cpp \
	EquipTable.cpp \
	FashionTable.cpp \
	GemCombineOnceTable.cpp \
	GemCombineTable.cpp \
	GemLvTable.cpp \
	GemTable.cpp \
	globalvar.cpp \
	HeroTable.cpp \
	NewJewelryTable.cpp\
	HoarstoneBaseTable.cpp \
	HoarstoneLvTable.cpp \
	HoarstoneRuneTable.cpp \
	HoarstoneStarTable.cpp \
	NewEquipLvTable.cpp \
	ItemTable.cpp \
	AttrEnhanceTable.cpp \
	AttrPolishTable.cpp \
	AttrRandomTable.cpp \
	Award.cpp \
VariableDefine.cpp \
Table.cpp
