AM_CPPFLAGS = -Wno-deprecated -I./ -D_LYNX_BYTE_ORDER_NOT_CONVERT -D_LYNX_DEBUG -D_LYNX_HAS_LIBICONV

noinst_LIBRARIES = libplatform.a 

libplatform_a_SOURCES = \
	TimeUtil.cpp \
	Condition.cpp \
	EncodingConvert.cpp \
	EventManager.cpp \
	FileUtilAndroidImpl.cpp \
	FileUtil.cpp \
	FileUtilImpl.cpp \
	IConvUtil.cpp \
	Logger_Android.cpp \
	Logger.cpp \
	Logger_Linux.cpp \
	Logger_Win32.cpp \
	MathUtil.cpp \
	MD5Hash.cpp \
	MemoryManager.cpp \
	Mutex.cpp \
	Random.cpp \
	ResourceGroupManager.cpp \
	Thread.cpp \
	TinyStr.cpp \
	TinyXml.cpp \
	TinyXmlError.cpp \
	ConfigManager.cpp \
	CSharpSerializeImpls.cpp \
	 StringConverter.cpp \
	TinyXmlParser.cpp
